[package]
name = "token"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.5"
solana-program = "2.1.13"
spl-associated-token-account = {version = "6.0.0", features = ["no-entrypoint"]}
spl-token = {version = "7.0.0", features = ["no-entrypoint"]}

[lib]
crate_type = ["cdylib","lib"]

[features]
no-entrypoint = []